Fixed readability except for empty stars when submitting

--- a/frontend/src/components/table/Tables.module.scss
+++ b/frontend/src/components/table/Tables.module.scss
@@ -40,7 +40,7 @@
   th, tr {
     color: #f2f2f2;
     font-weight: bold;
-    background-color: #333;
+    background-color: #444;
   }
 
   tr:nth-child(even) {
@@ -60,6 +60,7 @@
   .submitRating {
     display: flex;
     gap: 1em;
+    color: black;
 
     button {
       border: 1px #979797 solid;
@@ -87,7 +88,7 @@
   .summaryHeader {
     margin-top: 0;  // Removing top margin
     margin-bottom: 4px;  // Adjust bottom margin as per your needs
-    color: #333;
+    color: white;
     font-weight: 600;
   }
 
