--- a/frontend/src/pages/articles/ModeratorView.module.scss
+++ b/frontend/src/pages/articles/ModeratorView.module.scss
@@ -4,6 +4,11 @@
     background-color: black;
 }
 
+.button {
+    background-color: black;
+    color: white;
+}
+
 .container * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     
