--- a/frontend/src/pages/articles/UserView.module.scss
+++ b/frontend/src/pages/articles/UserView.module.scss
@@ -16,7 +16,9 @@
     padding: 15px;  
     font-size: 18px; 
     border-radius: 5px;
-    border: 1px solid #ccc; 
+    border: 1px solid white; 
+    color: white;
+    background-color: black;
 }
 
 .searchDropdown {
@@ -25,6 +27,8 @@
     border-radius: 5px;
     padding: 8px; 
     font-size: 1rem; 
+    color: white;
+    background-color: black;
   }
 
 
